--- a/standards_graph.html
+++ b/standards_graph.html
@@ -92,7 +92,7 @@
                 .attr("class", "tooltip");
 
             // Load the data
-            d3.json("graph_data.json").then(function(data) {
+            d3.json("ccssm-graph-data.json").then(function(data) {
                 const nodes = data.nodes;
                 const links = data.links;
 
